# ASCIIPro

./: .gitignore  CMakeLists.txt  ReadMe.md  makefile
cmake/: FindICU.cmake
include/Components/: ASCIIGraphic.h  ASCIISprite.h  Canvas.h  Transform.h
include/Components/Animation/: Animator.h
include/Core/: Game.h
include/Core/Input/: InputManager.h
include/Core/Sprite/: SpriteExport.h
include/ECS/: Component.h  Entity.h
include/SnakeGame/: PlayerMovementController.h
includes/Components/: ASCIIGraphic.h  ASCIISprite.h  Canvas.h  Transform.h
includes/Core/: Game.h  GameLoop.h  InputManager.h  Time.h
includes/Core/Sprite/: SpriteExport.h
includes/ECS/: Component.h  Entity.h
includes/SnakeGame/: PlayerMovementController.h
resources/: sprite.txt
scripts/: create_class.py  remove_class.py  rename_class.py
src/: main.cpp
src/Components/: ASCIIGraphic.cpp  ASCIISprite.cpp  Canvas.cpp  Transform.cpp
src/Components/Animation/: Animator.cpp
src/Core/: Game.cpp  GameLoop.cpp  InputManager.cpp  Time.cpp
src/Core/Input/: InputManager.cpp
src/Core/Sprite/: SpriteExport.cpp
src/ECS/: Component.cpp  Entity.cpp
src/SnakeGame/: PlayerMovementController.cpp
